--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,7 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnCount="3"
+    android:columnCount="2"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -16,16 +16,12 @@
         android:scaleType="center"
         android:src="@drawable/ic_weight_26dp" />
 
-    <TextView
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="@dimen/activity_vertical_margin_sec"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:text="Hello World!" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/activity_vertical_margin_sec"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin" />
+        android:inputType="number"
+        />
 
     <ImageView
         android:id="@+id/wIconX"
@@ -35,15 +31,11 @@
         android:scaleType="center"
         android:src="@drawable/ic_weight_26dp" />
 
-    <TextView
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="@dimen/activity_vertical_margin_sec"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:text="Hello World!" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/activity_vertical_margin_sec"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin" />
+        android:hint="Age"
+        android:inputType="number"/>
 
 </GridLayout>
