--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="lb_50">#E1F5FE</color>
     <color name="lb_200">#81D4FA</color>
     <color name="ao_400">#FF3D00</color>
+    <color name="gr_400">#BDBDBD</color>
 </resources>
