--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,41 +1,69 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:columnCount="2"
-    android:orientation="horizontal"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/wIcon"
-        android:layout_width="@dimen/first_col_width"
-        android:layout_height="@dimen/activity_vertical_margin_sec"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:scaleType="center"
-        android:src="@drawable/ic_weight_26dp" />
-
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/activity_vertical_margin_sec"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:inputType="number"
-        />
-
-    <ImageView
-        android:id="@+id/wIconX"
-        android:layout_width="@dimen/first_col_width"
-        android:layout_height="@dimen/activity_vertical_margin_sec"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:scaleType="center"
-        android:src="@drawable/ic_weight_26dp" />
+        android:orientation="horizontal">
 
-    <EditText
+        <ImageView
+            android:id="@+id/wIcon"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:scaleType="center"
+            android:src="@drawable/ic_weight_26dp"
+            android:tint="@color/lb_900"
+            android:layout_weight="1"
+            android:layout_gravity="left"/>
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:hint="lbs."
+            android:inputType="number"
+            android:textAlignment="viewEnd"
+            android:textColorHint="@color/gr_400"
+            android:layout_weight="3"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/activity_vertical_margin_sec"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:hint="Age"
-        android:inputType="number"/>
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:orientation="horizontal">
 
-</GridLayout>
+        <ImageView
+            android:id="@+id/wIconX"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:scaleType="center"
+            android:src="@drawable/ruler"
+            android:tint="@color/lb_900"
+            android:layout_weight="1"
+            android:layout_gravity="left"/>
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:hint="feet"
+            android:inputType="number"
+            android:textAlignment="viewEnd"
+            android:textColorHint="@color/gr_400"
+            android:layout_weight="1.5"/>
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:hint="inches"
+            android:inputType="number"
+            android:textAlignment="viewEnd"
+            android:textColorHint="@color/gr_400"
+            android:layout_weight="1.5"/>
+    </LinearLayout>
+
+</LinearLayout>
