--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,69 +1,100 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginEnd="@dimen/activity_horizontal_margin"
+    android:layout_marginStart="@dimen/activity_horizontal_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/activity_vertical_margin_sec"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/wIcon"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:scaleType="center"
-            android:src="@drawable/ic_weight_26dp"
-            android:tint="@color/lb_900"
+            android:layout_height="40dp"
+            android:layout_gravity="left|center_vertical"
             android:layout_weight="1"
-            android:layout_gravity="left"/>
+            android:scaleType="fitStart"
+            android:src="@drawable/ic_weight_26dp"
+            android:tint="@color/lb_900" />
 
         <EditText
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="3"
             android:hint="lbs."
             android:inputType="number"
             android:textAlignment="viewEnd"
-            android:textColorHint="@color/gr_400"
-            android:layout_weight="3"/>
+            android:textColorHint="@color/gr_400" />
+
+        <Switch
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:buttonTint="@color/lb_900"
+            android:soundEffectsEnabled="true"
+            android:text="TEST"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/activity_vertical_margin_sec"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/ageIcon"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_gravity="left|center_vertical"
+            android:layout_weight="1"
+            android:scaleType="fitStart"
+            android:src="@drawable/ic_cake_black_24dp"
+            android:tint="@color/lb_900" />
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:hint="age"
+            android:inputType="number"
+            android:textAlignment="viewEnd"
+            android:textColorHint="@color/gr_400" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/activity_vertical_margin_sec"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/wIconX"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:scaleType="center"
-            android:src="@drawable/ruler"
-            android:tint="@color/lb_900"
+            android:layout_height="40dp"
+            android:layout_gravity="left"
             android:layout_weight="1"
-            android:layout_gravity="left"/>
+            android:scaleType="fitStart"
+            android:src="@drawable/ic_straighten_black_24dp"
+            android:tint="@color/lb_900" />
 
         <EditText
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1.5"
             android:hint="feet"
             android:inputType="number"
             android:textAlignment="viewEnd"
-            android:textColorHint="@color/gr_400"
-            android:layout_weight="1.5"/>
+            android:textColorHint="@color/gr_400" />
 
         <EditText
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1.5"
             android:hint="inches"
             android:inputType="number"
             android:textAlignment="viewEnd"
-            android:textColorHint="@color/gr_400"
-            android:layout_weight="1.5"/>
+            android:textColorHint="@color/gr_400" />
     </LinearLayout>
 
 </LinearLayout>
