--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -112,5 +112,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1" />
     </LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:text="BMI"/>
 
 </LinearLayout>
