--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="lb_200">#81D4FA</color>
     <color name="ao_400">#FF3D00</color>
     <color name="gr_400">#BDBDBD</color>
+    <color name="gr_700">#616161</color>
 </resources>
