--- a/app/src/main/res/drawable/line_shape.xml
+++ b/app/src/main/res/drawable/line_shape.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="line">
 
     <stroke
         android:width="1dp"
         android:color="@color/gr_400"
-        android:dashWidth="1dp"
-        android:dashGap="0dp" />
+        android:dashGap="0dp"
+        android:dashWidth="1dp" />
 </shape>
