--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,17 @@
             android:id="@+id/detailFrame"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+            android:layout_weight="1" >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_panorama_vertical_black_24dp"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:elevation="5dp"
+            android:tint="@color/gr_700"/>
+        </FrameLayout>
 
 
         <ImageView
@@ -49,14 +59,14 @@
             android:layout_height="0dp"
             android:layout_weight="1.5" />
 
-        <android.support.design.widget.FloatingActionButton
+        <!--<android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_check_box_black_24dp"
-            android:tint="#FFFFFF"/>
+            android:tint="#FFFFFF"/>-->
 
     </LinearLayout>
 
