--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -24,7 +24,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:background="@color/fragBackgroundColor"
         android:layout_marginTop="?attr/actionBarSize"
         android:orientation="horizontal">
 
@@ -40,7 +40,7 @@
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_weight="0.01"
+            android:layout_weight="0.003"
             android:background="@color/gr_400" />
 
 
