--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,34 +24,34 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:layout_marginTop="?attr/actionBarSize"
+        android:background="@color/fragBackgroundColor"
         android:orientation="vertical">
 
         <FrameLayout
             android:id="@+id/detailFrame"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1" >
+            android:layout_weight="1">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_panorama_vertical_black_24dp"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:elevation="5dp"
-            android:tint="@color/gr_700"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:elevation="5dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_panorama_vertical_black_24dp"
+                android:tint="@color/gr_700" />
         </FrameLayout>
 
 
-        <ImageView
+        <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.01"
-            android:src="@drawable/line_shape"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
+            android:layout_weight="0.003"
+            android:background="@color/gr_400" />
 
         <FrameLayout
             android:id="@+id/inputFrame"
