--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -24,15 +24,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/fragBackgroundColor"
         android:layout_marginTop="?attr/actionBarSize"
+        android:background="@color/fragBackgroundColor"
         android:orientation="horizontal">
 
         <FrameLayout
             android:id="@+id/inputFrame"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1.5"></FrameLayout>
+            android:layout_weight="1.5" />
 
 
         <View
@@ -41,7 +41,7 @@
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_weight="0.003"
-            android:background="@color/gr_400" />
+            android:background="@color/dividerColor" />
 
 
         <FrameLayout
@@ -50,25 +50,25 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <ImageView
+            <!--<ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:elevation="5dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_panorama_vertical_black_24dp"
-                android:tint="@color/gr_700" />
+                android:tint="@color/gr_700" />-->
         </FrameLayout>
 
 
     </LinearLayout>
 
-    <!--<android.support.design.widget.FloatingActionButton
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_check_box_black_24dp"
-        android:tint="#FFFFFF" />-->
+        android:src="@drawable/ic_touch_app_black_24dp"
+        android:tint="#FFFFFF" />
 </android.support.design.widget.CoordinatorLayout>
