--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,14 +34,14 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <ImageView
+            <!--<ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:elevation="5dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_panorama_vertical_black_24dp"
-                android:tint="@color/gr_700" />
+                android:tint="@color/gr_700" />-->
         </FrameLayout>
 
 
@@ -51,7 +51,7 @@
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_weight="0.003"
-            android:background="@color/gr_400" />
+            android:background="@color/dividerColor" />
 
         <FrameLayout
             android:id="@+id/inputFrame"
@@ -59,14 +59,14 @@
             android:layout_height="0dp"
             android:layout_weight="1.5" />
 
-        <!--<android.support.design.widget.FloatingActionButton
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="right"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_check_box_black_24dp"
-            android:tint="#FFFFFF"/>-->
+            android:src="@drawable/ic_touch_app_black_24dp"
+            android:tint="#FFFFFF" />
 
     </LinearLayout>
 
