--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,32 +1,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginEnd="@dimen/activity_horizontal_margin"
     android:layout_marginStart="@dimen/activity_horizontal_margin"
-    android:orientation="horizontal"
-    tools:context="com.sahajapp.bmiapp.DetailFragment">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/wIcon"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_gravity="left|center_vertical"
-        android:layout_weight="1"
-        android:scaleType="fitStart"
-        android:src="@drawable/bmi_result"
-        android:tint="@color/lb_900" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/activity_vertical_margin_sec"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_height="16dp"
-        android:layout_gravity="left|center_vertical"
-        android:layout_weight="3"
-        android:src="@drawable/gradient_bar" />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_gravity="left|center_vertical"
+            android:layout_weight="1"
+            android:fontFamily="sans-serif-medium"
+            android:text="BMI"
+            android:textColor="@color/textColorPrimary"
+            android:tint="@color/lb_900" />
 
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="3"
+            android:layout_gravity="left|center_vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="16dp"
+                android:src="@drawable/gradient_bar"
+                android:layout_gravity="top"/>
+
+            <ImageView
+                android:layout_width="8dp"
+                android:layout_height="16dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_panorama_vertical_black_24dp"
+                android:tint="@color/gr_700"
+                android:layout_gravity="center_vertical|top|center_horizontal"/>
+        </FrameLayout>
+
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
 </LinearLayout>
