--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,28 +10,40 @@
         android:layout_height="@dimen/activity_vertical_margin_sec"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/wIcon"
+        <!-- <ImageView
+             android:id="@+id/wIcon"
+             android:layout_width="0dp"
+             android:layout_height="40dp"
+             android:layout_gravity="left|center_vertical"
+             android:layout_weight="1"
+             android:scaleType="fitStart"
+             android:src="@drawable/ic_weight_26dp"
+             android:tint="@color/lb_900" />-->
+        <TextView
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_gravity="left|center_vertical"
             android:layout_weight="1"
-            android:scaleType="fitStart"
-            android:src="@drawable/ic_weight_26dp"
-            android:tint="@color/lb_900" />
+            android:text="Weight"
+            android:textColor="@color/textColorPrimary"
+            android:tint="@color/lb_900"
+            android:fontFamily="sans-serif-medium"/>
 
         <EditText
+            android:id="@+id/weight"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_weight="3"
+            android:fontFamily="sans-serif-condensed"
             android:hint="lbs."
             android:inputType="number"
             android:textAlignment="viewEnd"
             android:textColorHint="@color/gr_400" />
 
         <Switch
+            android:id="@+id/weightUnit"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_weight="1"
             android:buttonTint="@color/lb_900"
             android:showText="true"
@@ -45,28 +57,41 @@
         android:layout_height="@dimen/activity_vertical_margin_sec"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/ageIcon"
+        <!-- <ImageView
+             android:id="@+id/ageIcon"
+             android:layout_width="0dp"
+             android:layout_height="40dp"
+             android:layout_gravity="left|center_vertical"
+             android:layout_weight="1"
+             android:scaleType="fitStart"
+             android:src="@drawable/ic_cake_black_24dp"
+             android:tint="@color/lb_900" />-->
+
+        <TextView
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_gravity="left|center_vertical"
             android:layout_weight="1"
-            android:scaleType="fitStart"
-            android:src="@drawable/ic_cake_black_24dp"
-            android:tint="@color/lb_900" />
+            android:text="Age"
+            android:textColor="@color/textColorPrimary"
+            android:tint="@color/lb_900"
+            android:fontFamily="sans-serif-medium"/>
 
         <EditText
+            android:id="@+id/years"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_weight="3"
-            android:hint="age"
+            android:fontFamily="sans-serif-condensed"
+            android:hint="years"
             android:inputType="number"
             android:textAlignment="viewEnd"
             android:textColorHint="@color/gr_400" />
 
         <Switch
+            android:id="@+id/sex"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_weight="1"
             android:buttonTint="@color/lb_900"
             android:showText="true"
@@ -80,28 +105,41 @@
         android:layout_height="@dimen/activity_vertical_margin_sec"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/wIconX"
+        <!-- <ImageView
+             android:id="@+id/wIconX"
+             android:layout_width="0dp"
+             android:layout_height="40dp"
+             android:layout_weight="1"
+             android:scaleType="fitStart"
+             android:src="@drawable/ic_straighten_black_24dp"
+             android:tint="@color/lb_900" />-->
+
+        <TextView
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:scaleType="fitStart"
-            android:src="@drawable/ic_straighten_black_24dp"
-            android:tint="@color/lb_900" />
+            android:text="Height"
+            android:textColor="@color/textColorPrimary"
+            android:tint="@color/lb_900"
+            android:fontFamily="sans-serif-medium"/>
 
         <EditText
+            android:id="@+id/feet"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_weight="1.5"
+            android:fontFamily="sans-serif-condensed"
             android:hint="feet"
             android:inputType="number"
             android:textAlignment="viewEnd"
             android:textColorHint="@color/gr_400" />
 
         <EditText
+            android:id="@+id/inchs"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_weight="1.5"
+            android:fontFamily="sans-serif-condensed"
             android:hint="inches"
             android:inputType="number"
             android:textAlignment="viewEnd"
@@ -109,14 +147,15 @@
 
         <ImageView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_weight="1" />
     </LinearLayout>
-    <Button
+
+   <!-- <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="BMI"/>
+        android:text="BMI" />-->
 
 </LinearLayout>
