--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -19,49 +19,59 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <!-- <android.support.design.widget.TabLayout
+             android:id="@+id/tabs"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content" />-->
+
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
+   <!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:background="@color/fragBackgroundColor"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">-->
 
-        <FrameLayout
-            android:id="@+id/inputFrame"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.5" />
+            android:layout_marginTop="?attr/actionBarSize"
+            android:background="@color/fragBackgroundColor"
+            android:orientation="horizontal">
+
+            <FrameLayout
+                android:id="@+id/inputFrame"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1.5" />
 
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_weight="0.003"
-            android:background="@color/dividerColor" />
+            <View
+                 android:layout_width="0dp"
+                 android:layout_height="match_parent"
+                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                 android:layout_marginStart="@dimen/activity_horizontal_margin"
+                 android:layout_weight="0.003"
+                 android:background="@color/dividerColor" />
 
 
-        <FrameLayout
-            android:id="@+id/detailFrame"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            <FrameLayout
+                android:id="@+id/detailFrame"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-            <!--<ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:elevation="5dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_panorama_vertical_black_24dp"
-                android:tint="@color/gr_700" />-->
-        </FrameLayout>
+                <!--<ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:elevation="5dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_panorama_vertical_black_24dp"
+                    android:tint="@color/gr_700" />-->
+            </FrameLayout>
 
 
-    </LinearLayout>
+        </LinearLayout>
+    <!--</ScrollView>-->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
