--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -23,22 +23,22 @@
         <FrameLayout
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_weight="3"
-            android:layout_gravity="left|center_vertical">
+            android:layout_gravity="left|center_vertical"
+            android:layout_weight="3">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="16dp"
-                android:src="@drawable/gradient_bar"
-                android:layout_gravity="top"/>
+                android:layout_gravity="top"
+                android:src="@drawable/gradient_bar" />
 
             <ImageView
                 android:layout_width="8dp"
                 android:layout_height="16dp"
+                android:layout_gravity="center_vertical|top|center_horizontal"
                 android:scaleType="fitXY"
                 android:src="@drawable/ic_panorama_vertical_black_24dp"
-                android:tint="@color/gr_700"
-                android:layout_gravity="center_vertical|top|center_horizontal"/>
+                android:tint="@color/gr_700" />
         </FrameLayout>
 
 
