--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#4CAF50</color>
     <color name="colorPrimaryDark">#388E3C</color>
-    <color name="colorAccent">#FF5252</color>
+    <color name="colorAccent">#BF360C</color>
     <color name="lb_500">#03A9F4</color>
     <color name="lb_700">#0288D1</color>
     <color name="lb_900">#01579B</color>
