--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="activity_vertical_margin_sec">72dp</dimen>
     <dimen name="first_col_width">56dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="inputTextHeight">40dp</dimen>
 </resources>
