--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,13 +61,15 @@
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_weight="0.003"
-            android:background="@color/dividerColor" />
+            android:background="@color/dividerColor"
+            />
 
         <FrameLayout
             android:id="@+id/inputFrame"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1.5">
+
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab"
