--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -35,29 +35,32 @@
             android:layout_height="match_parent"
             android:layout_marginTop="?attr/actionBarSize"
             android:background="@color/fragBackgroundColor"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <FrameLayout
-                android:id="@+id/inputFrame"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1.5" />
+                android:id="@+id/detailFrame"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="#C8E6C9"
+                android:elevation="5dp"/>
 
 
-            <View
+           <!-- <View
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_marginEnd="@dimen/activity_horizontal_margin"
                  android:layout_marginStart="@dimen/activity_horizontal_margin"
-                 android:layout_weight="0.003"
-                 android:background="@color/dividerColor" />
+                 android:layout_weight="0.006"
+                 android:background="@color/dividerColor" />-->
 
 
             <FrameLayout
-                android:id="@+id/detailFrame"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:id="@+id/inputFrame"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="3"
+                >
 
                 <!--<ImageView
                     android:layout_width="wrap_content"
@@ -77,8 +80,9 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_touch_app_black_24dp"
-        android:tint="#FFFFFF" />
+        android:tint="#FFFFFF"
+        app:layout_anchor="@+id/detailFrame"
+        app:layout_anchorGravity="bottom|right|end"/>
 </android.support.design.widget.CoordinatorLayout>
