--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="first_col_width">56dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="inputTextHeight">40dp</dimen>
+    <dimen name="inputTextSize">16sp</dimen>
 </resources>
