--- a/app/src/main/res/layout-land/fragment_detail.xml
+++ b/app/src/main/res/layout-land/fragment_detail.xml
@@ -24,6 +24,7 @@
 
 
         <TextView
+            android:id="@+id/bmiResultTxt"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -58,6 +59,7 @@
 
 
         <TextView
+            android:id="@+id/weightStatusTxt"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -92,6 +94,7 @@
 
 
         <TextView
+            android:id="@+id/idealWeightTxt"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -112,7 +115,6 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
-
 
 
 </LinearLayout>
