--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -26,6 +26,7 @@
 
 
         <TextView
+            android:id="@+id/bmiResultTxt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -61,6 +62,7 @@
 
 
         <TextView
+            android:id="@+id/weightStatusTxt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -96,6 +98,7 @@
 
 
         <TextView
+            android:id="@+id/idealWeightTxt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
