--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:background="#C8E6C9"
+            android:background="@color/lightPrimaryColor"
             android:elevation="5dp" />
 
         <FrameLayout
